--- a/app/src/main/develop/res/values/strings.xml
+++ b/app/src/main/develop/res/values/strings.xml
@@ -1,17 +1,14 @@
 <resources>
-    <string name="app_name">QRCode</string>
-
-    <!--启动页-->
-    <string name="smart_clean_master">Super Smart Cleaner</string>
+    <string name="app_name">QRCoder</string>
 
     <!--引导页-->
-    <string name="clean_unuse_photo">Clean up useless pictures</string>
-    <string name="onekey_clean_blur_dupli">Clear blurry duplicate pictures with one click</string>
-    <string name="next_step">Next</string>
+    <string name="next_step">Next Step</string>
+    <string name="start">Start</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="terms_of_service">Terms of Service</string>
-    <string name="smart_photo_clean">Smart picture clean</string>
-    <string name="clean_simil_large">Clear similar and oversized pictures</string>
+    <string name="guide_prompt_1">Create and share QR Codes with\nunique shades</string>
+    <string name="guide_prompt_2">One-click scan for detailed\ninformation</string>
+    <string name="guide_prompt_3">Export the scan history to the table\nwith one click</string>
 
     <!--zxing-->
     <string name="msg_google_books">Google</string>
